# smartapi-mcp

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
.zed/: settings.json
scripts/: publish.py
smartapi_mcp/: __init__.py  awslabs_server.py  cli.py  config.py  router.py  server.py  smartapi.py
tests/: __init__.py  test_basic.py  test_cli.py  test_config.py  test_init.py  test_main.py  test_server.py  test_smartapi.py
